// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicGrid should render a Grid with merged attributes 1`] = `
<div
  className="TestClass region_3hmsj"
  data-mock="data"
  style={
    Object {
      "height": "100px",
    }
  }
>
  <div
    className="region-child-container"
  />
</div>
`;

exports[`DynamicGrid should render a default component 1`] = `
<div
  className="region_3hmsj"
  name="foo"
>
  <div
    className="region-child-container"
  />
</div>
`;
